parser/tests/Delete.test
# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.  See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership.  The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing,
# software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
# KIND, either express or implied.  See the License for the
# specific language governing permissions and limitations
# under the License.

DELETE FROM test WHERE tb1=1
--
DeleteStatement[relation_name=test]
+-where_predicate=Equal
  +-left_operand=AttributeReference[attribute_name=tb1]
  +-right_operand=Literal
    +-NumericLiteral[numeric_string=1,float_like=false]
==

DELETE FROM test
--
DeleteStatement[relation_name=test]
==

DELETE FROM TABLE
--
ERROR: syntax error (1 : 13)
DELETE FROM TABLE
            ^
==

DELETE FROM TABLE test
--
ERROR: syntax error (1 : 13)
DELETE FROM TABLE test
            ^
==

DELETE FROM test1, test2
--
ERROR: syntax error (1 : 18)
DELETE FROM test1, test2
                 ^
